--- a/10.vue结合css.html
+++ b/10.vue结合css.html
@@ -17,19 +17,16 @@
 
 <div id="app">
     <button @click="fn">按钮</button>
-    <div class="box" :style="{width: w}"></div>
+    <div class="box" ref="box1"></div>
 </div>
 
 <script src="./js/vue.js"></script>
 <script>
     let app = new Vue({
         el: '#app',
-        data: {
-            w: '100px'
-        },
         methods: {
             fn() {
-                this.w = '200px';
+                this.$refs.box1.style.width = '200px';
             }
         }
     });
