--- a/13.transition.html
+++ b/13.transition.html
@@ -8,17 +8,37 @@
             width: 100px;
             height: 100px;
             background: red;
-            /*修改box样式就会触发该动画*/
-            transition: all .5s;
+        }
+
+        .slide-fade-enter-active, .slide-fade-leave-active {
+            transition: all 5s ease;
+        }
+        .slide-fade-enter {
+            width: 0;
+            height: 0;
+        }
+        .slide-fade-enter-to {
+            width: 100px;
+            height: 100px;
+        }
+        .slide-fade-leave {
+            /*可以和slide-fade-enter-to合并*/
+            width: 100px;
+            height: 100px;
+        }
+        .slide-fade-leave-to {
+            /*可以和slide-fade-enter合并*/
+            width: 0;
+            height: 0;
         }
     </style>
 </head>
 <body>
 
 <div id="app">
-    <button @click="fn">按钮</button>
+    <button >按钮</button>
     <button @click="isShow=!isShow">{{isShow}}</button>
-    <transition>
+    <transition name="slide-fade">
         <div class="box" v-if="isShow"></div>
     </transition>
 
@@ -30,13 +50,7 @@
     let app = new Vue({
         el: '#app',
         data: {
-            isShow: true,
-            w: '100px'
-        },
-        methods: {
-            fn() {
-                this.$refs.box1.style.width = '200px';
-            }
+            isShow: true
         }
     });
 
