a1.53（example01-2——调用vue的proptotype下扩展功能）

--- a/14.插件.html
+++ b/14.插件.html
@@ -25,6 +25,7 @@
         methods: {
             fn() {
                 console.log(this);
+                this.getName();
             }
         }
     });
