a1.55（example02-2——注入组件选项）

--- a/14.插件.html
+++ b/14.插件.html
@@ -20,6 +20,9 @@
         data: {
 
         },
+        created() {
+            console.log('created');
+        },
         methods: {
             fn() {
                 console.log(this);
